--- a/src/app/components/hora-atencion/agenda/agenda.component.html
+++ b/src/app/components/hora-atencion/agenda/agenda.component.html
@@ -26,7 +26,7 @@
                 {{titleDate}}
             </h2>
         </div>
-        <div class="col-lg-2 date">
+        <div class="col-lg-2 date text-right">
             <button (click)="nextDay()" class="btn btn-primary" type="button">Día siguiente<i
                     class="bi bi-arrow-right-short"></i></button>
         </div>
