--- a/src/app/components/paciente/historial-pacientes/historial-pacientes.component.html
+++ b/src/app/components/paciente/historial-pacientes/historial-pacientes.component.html
@@ -39,7 +39,7 @@
                 </table>
                 <div class="row">
                     <div class="col-lg-6">
-                        <app-paginador *ngIf="paginador" [paginador]='paginador'></app-paginador>
+                        <app-historial-paginador *ngIf="paginador" [paginador]='paginador'></app-historial-paginador>
                     </div>
                     <div class="col-lg-6 text-right">
                         <button (click)="back()" class="btn btn-primary" type="button">Volver</button>
